--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
+    "fs-extra": "^9.0.0",
+    "gray-matter": "^4.0.2",
     "next": "9.3.2",
     "preact": "^10.3.4",
     "preact-render-to-string": "^5.1.4",
@@ -16,6 +18,7 @@
     "react-ssr-prepass": "npm:preact-ssr-prepass@^1.0.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.0",
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.34",
     "eslint": "^7.0.0",
