--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "fs-extra": "^9.0.0",
+    "google-map-react": "^1.1.7",
     "gray-matter": "^4.0.2",
     "next": "9.3.2",
     "preact": "^10.3.4",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.0",
+    "@types/google-map-react": "^1.1.7",
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.34",
     "eslint": "^7.0.0",
